openmolar (0.3.9+bzr0825-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 24 May 2013 10:50:59 +0100


openmolar (0.3.9+bzr0824-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 23 May 2013 11:30:51 +0100


openmolar (0.3.8+bzr0822-0~__DIST__0) __DIST__; urgency=low

  * reinstated address search when no relatives linked

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 21 May 2013 23:17:37 +0100


openmolar (0.3.8+bzr0820-0~__DIST__0) __DIST__; urgency=low

  * bugfix for 0.3.8

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 21 May 2013 15:23:34 +0100


openmolar (0.3.8+bzr0819-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 21 May 2013 11:23:56 +0100


openmolar (0.3.7+bzr0818-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 11 May 2013 00:09:39 +0100


openmolar (0.3.7+bzr0816-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 30 Apr 2013 18:19:43 +0100


openmolar (0.3.7+bzr0815-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 30 Apr 2013 16:44:16 +0100


openmolar (0.3.6+bzr0814-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 25 Apr 2013 23:01:17 +0100


openmolar (0.3.5+bzr0813-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 25 Apr 2013 00:28:05 +0100


openmolar (0.3.5+bzr0812-0~__DIST__0) __DIST__; urgency=low

  * upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 25 Apr 2013 00:01:28 +0100


openmolar (0.3.4+bzr0807-1~__DIST__0) __DIST__; urgency=low

  * rebuild
